--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/22119435.png
+    - assets/images/22123444.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -89,3 +92,24 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: NotoSansJP
+      fonts:
+        - asset: assets/fonts/notosansjp/NotoSansJP-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/notosansjp/NotoSansJP-ExtraLight.ttf
+          weight: 200
+        - asset: assets/fonts/notosansjp/NotoSansJP-Light.ttf
+          weight: 300
+        - asset: assets/fonts/notosansjp/NotoSansJP-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/notosansjp/NotoSansJP-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/notosansjp/NotoSansJP-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/notosansjp/NotoSansJP-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/notosansjp/NotoSansJP-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/notosansjp/NotoSansJP-Black.ttf
+          weight: 900
